Refactored chromosome for FFNN weights